[package]
name = "recipes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
skim = "*"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
itertools = "0.10.5"
colored = "2.0.0"
rust-embed = "6.6.1"
